--- a/Watcher/templates/components/base.html
+++ b/Watcher/templates/components/base.html
@@ -32,6 +32,20 @@
             <a class="nav-link" href="/device/">Devices <span class="sr-only">(current)</span></a>
           </li>
         </ul>
+        <ul class="navbar-nav">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
+              aria-expanded="false">Welcome, {{.user.UserName}}</a>
+            <div class="dropdown-menu">
+              <a href="/account/" class="dropdown-item">Account</a>
+              <a href="/account/settings/" class="dropdown-item">Settings</a>
+              <div class="dropdown-divider"></div>
+              <form id="signoff" action="/auth/logout/" method="post">
+                <a class="dropdown-item" onclick="$('#signoff').submit();">Sign Off</a>
+              </form>
+            </div>
+          </li>
+        </ul>
       </div>
     </div>
   </nav>
