Added basic account control mechanism

--- a/Watcher/static/sass/_base.sass
+++ b/Watcher/static/sass/_base.sass
@@ -13,3 +13,8 @@ nav
 .row
     padding-left: 1em
     padding-right: 1em
+
+// Fix form breaking the btn-group-vertical
+.no-border
+    border-radius: 0px
+    
