App now redirects user to the page he tried to access after login

--- a/Watcher/templates/auth/login.html
+++ b/Watcher/templates/auth/login.html
@@ -17,7 +17,7 @@
   <div class="container">
     <div class="col-12 col-sm-6 offset-sm-3 center-screen" id="form-container">
       
-      <form action="/auth/login/" method="post">
+      <form action="/auth/login/?nextPage={{.nextPage}}" method="post">
         <div class="fw-title">
           <img src="/static/images/FireEmblem.png" alt="Fire Emblem">
           <span>FireWatch</span>
