--- a/Watcher/static/css/dashboard.css
+++ b/Watcher/static/css/dashboard.css
@@ -1,7 +1,3 @@
-body {
-  color: #4d4d4d;
-}
-
 nav {
   margin-bottom: 1em;
 }
@@ -11,13 +7,12 @@ nav img {
   height: auto;
 }
 
-.row {
-  padding-left: 1em;
-  padding-right: 1em;
-}
-
 .no-border {
   border-radius: 0px;
+}
+
+.row-offset {
+  margin-top: 2em;
 }
 
 body {
