--- a/Watcher/static/sass/_base.sass
+++ b/Watcher/static/sass/_base.sass
@@ -1,6 +1,3 @@
-body
-    color: darken(grey, 20)
-
 // General settings for the navigation bars
 nav
     margin-bottom: 1em
@@ -9,12 +6,10 @@ nav
         width: 30px
         height: auto
 
-// Add padding tot the rows so we aren't edge to edge with the screen
-.row
-    padding-left: 1em
-    padding-right: 1em
-
 // Fix form breaking the btn-group-vertical
 .no-border
     border-radius: 0px
+
+.row-offset
+    margin-top: 2em
     
