Improved base styling of web application

--- a/Watcher/static/css/account.css
+++ b/Watcher/static/css/account.css
@@ -1,36 +1,1 @@
-nav {
-  margin-bottom: 1em;
-}
-
-nav img {
-  width: 30px;
-  height: auto;
-}
-
-.no-border {
-  border-radius: 0px;
-}
-
-.row-offset {
-  margin-top: 2em;
-}
-
-.title {
-  font-size: 3em;
-  border-bottom: 1px solid lightgrey;
-  border-radius: 2px;
-}
-
-.btn-group-vertical {
-  -ms-flex-line-pack: center;
-      align-content: center;
-}
-
-.btn.inactive {
-  border: 1px solid lightgrey;
-}
-
-.btn.inactive:hover {
-  background-color: white;
-  cursor: default;
-}
+nav{margin-bottom:1em}nav img{width:30px;height:auto}.no-border{border-radius:0px}.row-offset{margin-top:2em}.title{border-bottom:1px solid lightgrey;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:horizontal;-webkit-box-direction:normal;-ms-flex-direction:row;flex-direction:row;-webkit-box-pack:justify;-ms-flex-pack:justify;justify-content:space-between}.title h1{font-size:3em}
