--- a/Watcher/static/sass/account.sass
+++ b/Watcher/static/sass/account.sass
@@ -2,16 +2,11 @@
 @import colors
 
 .title
-    font-size: 3em
     border-bottom: 1px solid lightgrey
-    border-radius: 2px
 
-.btn-group-vertical
-    align-content: center
+    display: flex
+    flex-direction: row
+    justify-content: space-between
 
-.btn.inactive
-    border: 1px solid lightgrey
-
-    &:hover
-        background-color: white
-        cursor: default
+    h1
+        font-size: 3em
