--- a/Watcher/templates/components/base.html
+++ b/Watcher/templates/components/base.html
@@ -6,10 +6,11 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  
+  <link rel="shortcut icon" href="/static/images/FireEmblem.png" type="image/x-icon">
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="/static/framework/bootstrap.css" crossorigin="anonymous">
-
   {{ template "css" .}}
 </head>
 
@@ -19,7 +20,8 @@
   <script src="/static/framework/jquery.js" crossorigin="anonymous"></script>
   <script src="/static/framework/popper.js" crossorigin="anonymous"></script>
   <script src="/static/framework/bootstrap.js" crossorigin="anonymous"></script>
-  
+  <script src="/static/framework/fontawesome.js" crossorigin="anonymous"></script>
+
   <nav class="navbar navbar-expand-md navbar-dark bg-dark">
     <div class="container">
 
