--- a/Watcher/static/css/device.css
+++ b/Watcher/static/css/device.css
@@ -1,20 +1,1 @@
-nav {
-  margin-bottom: 1em;
-}
-
-nav img {
-  width: 30px;
-  height: auto;
-}
-
-.no-border {
-  border-radius: 0px;
-}
-
-.row-offset {
-  margin-top: 2em;
-}
-
-.card {
-  height: 20em;
-}
+nav{margin-bottom:1em}nav img{width:30px;height:auto}.no-border{border-radius:0px}.row-offset{margin-top:2em}.card{height:20em}
